0.9.0 (currently working on)
- [#3320] Fix: Unbreak GMX by changing the default encoding for e-mails from base64 back to quoted-printable
- [#3319] Change: Use only LF in the e-mail body
- [#3314] Feature: Allow editing of existing target group records in the FE editor
- [#3313] Feature: Allow editing of existing checkbox records in the FE editor
- [#3316] Fix: Error in Unit Test populateListPlacesShowsPlaceWithOwnerIsLoggedInFrontEndUser
- [#3315] Fix: Fix the position of the "Edit" buttons in the FE editor
- [#3303] Fix: The registration cannot be submitted in Safari and Chrome
- [#3093] Feature: Allow editing of existing place records in the FE editor
- [#3289] Feature: Limit the list view to events with vacancies
- [#3288] Feature: Add a flexforms checkbox for the list view to show only events that have vacancies
- [#3287] Feature: Add a function to the seminar bag builder to only show events that have vacancies
- [#3301] Change: Model_Place::setCountry should also accept null
- [#3304] Fix: Crash on registration if a place has an invalid country
- [#3290] Fix: Changes to the "myself" checkbox are registered only when the checkbox loses the focus in IE
- [#3233] Feature: Add a modal editor for target groups
- [#3232] Feature: Add a modal editor for registration checkboxes
- [#3230] Feature: Add a modal editor for speakers
- [#3274] Fix: Front end editor crashes
- [#3244] Change: Remove the check in the BE module concerning whether there are any records on the page
- [#3268] Fix: The From: for the publishing e-mails is empty
- [#2646] Fix: Config check does not complain if loginPID is empty on list view page
- [#3267] Fix: List of flexforms checkboxes "Fields to display in the FE editor" is doubled
- [#3263] Feature: Add a fallback TS-setup value for the auxiliary records created in the FE
- [#3262] Feature: Add a setting to the FE-usergroups where events created in the FE-editor will be saved.